Closed Bug 484238 Opened 16 years ago Closed 16 years ago

no click event generated when div is clicked

Categories

(Core :: DOM: Events, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: martin.honnen, Assigned: smaug)

References

(Depends on 1 open bug, )

Details

(Keywords: regression, testcase, verified1.9.1)

Attachments

(3 files)

Attached file test case
In the test case I am going to upload, when you click the yellow bar which is part of the div with id "rbarRuler" with the mouse, Firefox 3.1 beta 3 as well as a trunk nightly (Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090319 Minefield/3.6a1pre) does not fire a click event. Firefox 3.0 however does, as do other browsers like IE 7 or Opera 9.6.
Regression range would be great.
The problem was originally reported in the German newsgroup de.comp.lang.javascript with the test case http://brain4.de/test/dcljs/events/ff3.1b3-testcase.html. The reporter there says that the problem happens with Firefox 3.1 beta 3 and all previous 3.1 betas.
Regression Range: works: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1a2pre) Gecko/20080814041610 Minefield/3.1a2pre fails: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1a2pre) Gecko/20080815064214 Minefield/3.1a2pre pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2008-08-14&enddate=2008-08-15
Flags: blocking1.9.1?
Attached file simple testcase
overflow:auto on the inner div is guilty
Flags: blocking1.9.1? → blocking1.9.1+
The regression range missed few hours. This is a regression from bug 262306.
Blocks: 262306
One option is to back out bug 262306 (and bug 458418 which was also a regression from bug 262306).
I don't understand why bug 262306 moved mouse capturing to happen before the following: if (frameselection->GetDisplaySelection() == nsISelectionController::SELECTION_OFF) return NS_OK;//nothing to do we cannot affect selection from here
(In reply to comment #7) er, nm that comment.
This is IMO significantly worse bug than bug 262306, so we should back out bug 262306 and bug 458418 and reopen bug 262306. That one is more like wanted1.9.1, not blocking1.9.1. IMHO.
Assignee: nobody → Olli.Pettay
Attachment #369727 - Flags: superreview?(roc)
Attachment #369727 - Flags: review?(roc)
Attachment #369727 - Flags: superreview?(roc)
Attachment #369727 - Flags: superreview+
Attachment #369727 - Flags: review?(roc)
Attachment #369727 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
verified FIXED using testcases attached on builds: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090721 Minefield/3.6a1pre ID:20090721044139 and Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.1pre) Gecko/20090720 Shiretoko/3.5.1pre ID:20090720042942
Status: RESOLVED → VERIFIED
Depends on: 1001085
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: