 Bug 484238 -  no click event generated when div is clicked, r+sr=roc